<resources>
    <string name="app_name">Control Almacen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Producto</string>
    <string name="menu_slideshow">Salida</string>
    <string name="menu_categoria">Categoria</string>
    <string name="menu_tipo">Tipo</string>
    <string name="menu_entrada">Entrada</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="title_activity_add_tipo">AddTipoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_add_producto">AddProductoActivity</string>
    <string name="title_activity_add_categoria">AddCategoriaActivity</string>
    <string name="title_activity_editar_categoria">EditarCategoriaActivity</string>
    <string name="title_activity_ad_main">AdMainActivity</string>
    <string name="title_activity_per_main">PerMainActivity</string>
    <string name="title_activity_perso_main">PersoMainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="rol">
        <item>admin</item>
        <item>personal</item>
    </string-array>
</resources>
